@@ -18,8 +18,8 @@
       <dt name="oc" class="<% &$rowtype %><% ($highlight eq 'output_channel' ? ' sorted' : '') %>"><% $lang->maketext('Output Channel') %>:</dt>
       <dd name="oc" class="<% &$rowtype %><% ($highlight eq 'output_channel' ? ' sorted' : '') %>"><% $oc || '&nbsp;' %></dd>
 % } else {
-      <dt name="type" class="<% &$rowtype %><% ($highlight eq 'element' ? ' sorted' : '') %>"><% $lang->maketext($type_label) %>:</dt>
-      <dd name="type" class="<% &$rowtype %><% ($highlight eq 'element' ? ' sorted' : '') %>"><% $type || '&nbsp;' %></dd>
+      <dt name="type" class="<% &$rowtype %><% ($highlight eq 'element_type' ? ' sorted' : '') %>"><% $lang->maketext($type_label) %>:</dt>
+      <dd name="type" class="<% &$rowtype %><% ($highlight eq 'element_type' ? ' sorted' : '') %>"><% $type || '&nbsp;' %></dd>
 % }
 % if (@$sites > 1) {
       <dt name="site" class="<% &$rowtype %><% ($highlight eq 'site_id' ? ' sorted' : '') %>"><% $lang->maketext('Site') %>:</dt>
