@@ -39,4 +39,5 @@
   <li>Benjamin Franz</li>
   <li>Alexey Sheynuk</li>
   <li>Christian Niles<li>
+  <li>Brad Harder<li>
 </ul>
